# SpamFilteringSystem

./: main.ipynb  main.py  pyproject.toml  requirements.txt  reworked_spam_eda_notebook.ipynb  reworked_spam_eda_notebook.py
app/: gradio_spam_demo.py
artifacts/: tfidf_logreg_pipeline.joblib
db/: database.py
models/: logistic_regression.ipynb  model.ipynb  roberta_training.ipynb
