[project]
name = "spam-filtering-system"
dynamic = ["version"]  # The version will be set dynamically
description = "Gives API for text-indexer status"

requires-python = ">=3.11"
dependencies = [
    # база
    "numpy>=1.24",
    "pandas>=2.0",

    # ML
    "scikit-learn>=1.3",

    # візуалізація
    "matplotlib>=3.7",
    "seaborn>=0.12",

    # Jupyter
    "jupyter>=1.0",
    "ipykernel>=6.0",

    # NLP / BERT
    "transformers>=4.40",
    "datasets>=2.18",
    "evaluate>=0.4",
    "accelerate>=0.27",

    # PyTorch (CPU версія)
    "torch>=2.2",

    # збереження моделей
    "joblib>=1.3",

    # UI
    "gradio>=4.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"